# sendmer

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  README_ZH.md  clippy.toml  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
docs/: MAINLINE_DEVELOPMENT_PLAN.md
scripts/: install-git-hooks.sh
src/: cli.rs  cli_progress.rs  common.rs  lib.rs  main.rs  types.rs  utils.rs
src/core/: args.rs  cli_helper.rs  common.rs  endpoint.rs  events.rs  hook.rs  mod.rs  options.rs  progress.rs  receive.rs  receiver.rs  results.rs  send.rs  sender.rs  session.rs  storage.rs  types.rs
src/transfer/: flow.rs
tests/: cli.rs
