[package]
name = "sendmer"
version = "0.3.1"
edition = "2024"
authors = ["likanug <likanug.g@qq.com>"]
keywords = ["scp", "sftp", "network", "p2p", "holepunching"]
categories = ["network-programming"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bruceblink/sendmer"
description = "A cli tool to send directories over the network, with NAT hole punching"
readme = "README.md"

[lib]
name = "sendmer"
path = "src/lib.rs"

[[bin]]
name = "sendmer"
path = "src/bin/sendmer.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.16"
derive_more = { version = "2", features = [
    "display",
    "from_str"
] }
# I had some issues with futures-buffered 0.2.9
indicatif = "0.18"
iroh-blobs = { version = "0.97" }
iroh = "0.95"
num_cpus = "1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
data-encoding = "2"
n0-future = "0.3"
crossterm = { version = "0.29", features = [
    "event-stream",
    "osc52",
], optional = true }
dirs = "6.0"
libc = "0.2"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Console"], optional = true }

[dev-dependencies]
duct = "1"
rand = "0.9"
tempfile = "3"

[features]
clipboard = ["dep:crossterm", "dep:windows-sys", "dep:libc"]
default = ["clipboard"]

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
lto = true
debug = "none"
strip = false
